--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
     <br>
     <div class="Tip_table">
         <center>
-            <table class = "explanations_table">
+            <table class = "Introduction_table">
                     <tbody>
                         <tr>
-                            <td><p style=" font-weight: bold; font-size: 220% ;">Mates</p>
+                            <td><p style=" font-weight: bold; font-size: 220% ;">Introducción</p>
                                 <pre>					    		
                                 </pre>
                                     <p>Bienvenido a la página web oficial de 3ºE eso del colegio C.E.U San Pablo Montepríncipe. 
