--- a/Tema2.html
+++ b/Tema2.html
@@ -143,7 +143,7 @@
 					<li><a href="https://www.youtube.com/404/"><i class="fa fa-youtube"></i></a></li>
 					<li><a href="https://www.linkedin.com/404(/?_l=en_US"><i class="fa fa-linkedin-square"></i></a></li>
 				</ul>
-				<p class="footer_text">Copyright &copy;2022 OutputtingCode. Designed by <span>Daniel Sánchez, Candela Gonzalez & David González</span></p>
+				<p class="footer_text">Copyright &copy;2022 OutputtingCode. Designed by <span>Daniel Sánchez, Candela González & David González</span></p>
 			</div>
 		</div>
 	</footer>
