--- a/Lengua Temas.html
+++ b/Lengua Temas.html
@@ -140,7 +140,7 @@
                 <p><center>Por un curso excepcional</center></p>
                 <div class="footer_bottom">
                     <ul class="socials">
-                        <li><a href="https://www.instagram.com/dani_atm25/"><i class="fa fa-instagram"></i></a></li>
+                        <li><a href="https://www.instagram.com/candela_2g/"><i class="fa fa-instagram"></i></a></li>
                         <li><a href="https://www.facebook.com/people/Candela-Gonz%C3%A1lez-G%C3%B3mez/100008026695946/"><i class="fa fa-facebook"></i></a></li>
                         <li><a href="https://twitter.com/404/"><i class="fa fa-twitter"></i></a></li>
                         <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
