--- a/index.html
+++ b/index.html
@@ -57,7 +57,20 @@
     <br>
     <br>
     <br>
-
+<!-- Inicio menú superior -->
+<nav class="navbar navbar-default navbar-fixed-top">
+    <div class="container-fluid" style="background-color: darkgreen; color: white">
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="./news.html">Noticias</a></li>
+        <li><a href="./Asignaturas.html">Asignaturas</a></li>
+        <li><a href="./tipsPage.html">Calendarios</a></li>
+        <li><a href="./Gallery.html">Chisme</a></li>
+        <li><a href="./testemail.html">Sobre nosotros</a></li>
+        <li><a href="./index.html">Sign Out</a></li>
+      </ul>
+    </div>
+</nav>    
+<!-- Fin menú superior -->
 <!-- Inicio Carrousel-->    
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
