Cambio menú superior

--- a/index.html
+++ b/index.html
@@ -38,29 +38,15 @@
             <div class="logo_container">
                 <a href="index.html"><h1>3ºE<span>ESO</span></h1></a>
             </div>
-
-            <ul class="navigation">
-                <a href="./news.html"><li>Noticias</li></a>
-                <a href="./Asignaturas.html"><li>Asignaturas</li></a>
-                <a href="./tipsPage.html"><li>Calendarios</li></a>
-                <a href="./Gallery.html"><li>Chisme</li></a>
-                <a href="./testemail.html"><li>Sobre Nosotros</li></a>
-                <a href="./index.html"><li>SignOut</li></a>
-            </ul>
         </div>
     </div>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
 <!-- Inicio menú superior -->
 <nav class="navbar navbar-default navbar-fixed-top">
-    <div class="container-fluid" style="background-color: darkgreen; color: white">
-      <ul class="nav navbar-nav navbar-right">
+    <div class="container-fluid" style="background-color:white; color: black">
+      <ul class="nav navbar-nav navbar-default>
+        <li><a href="index.html"><h1>3ºE<span>ESO</span></h1></a></li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">        
         <li><a href="./news.html">Noticias</a></li>
         <li><a href="./Asignaturas.html">Asignaturas</a></li>
         <li><a href="./tipsPage.html">Calendarios</a></li>
