--- a/index.html
+++ b/index.html
@@ -18,13 +18,6 @@
 	<title>3ºEEso</title>
 </head>
 <body class="Index">
-    <div class="header">
-        <div class="inner_header">
-            <div class="logo_container">
-                <a href="index.html"><h1>3ºE<span>ESO</span></h1></a>
-            </div>
-        </div>
-    </div>
 <!-- Inicio menú superior -->
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid" style="background-color:white; color: black">
@@ -32,12 +25,12 @@
         <li><a href="index.html"><h1>3ºE<span>ESO</span></h1></a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">        
-        <li><a href="./news.html">Noticias</a></li>
-        <li><a href="./Asignaturas.html">Asignaturas</a></li>
-        <li><a href="./tipsPage.html">Calendarios</a></li>
-        <li><a href="./Gallery.html">Chisme</a></li>
-        <li><a href="./testemail.html">Sobre nosotros</a></li>
-        <li><a href="./index.html">Sign Out</a></li>
+        <li><a href="./news.html"><h1>Noticias</h1></a></li>
+        <li><a href="./Asignaturas.html"><h1>Asignaturas</h1></a></li>
+        <li><a href="./tipsPage.html"><h1>Calendarios</h1></a></li>
+        <li><a href="./Gallery.html"><h1>Cotilleos</h1></a></li>
+        <li><a href="./testemail.html"><h1>Sobre nosotros</h1></a></li>
+        <li><a href="./index.html"><h1>Cerrar Sesión</h1></a></li>
       </ul>
     </div>
 </nav>    
