--- a/Tema1.html
+++ b/Tema1.html
@@ -19,22 +19,23 @@
 	</head>   
     <body class="Explanations">
         
-        <div class="header">
-            <div class="inner_header">
-                <div class="logo_container">
-                    <a href="./index.html"><h1>3ºE<span>ESO</span></h1></a>
-                </div>
-
-                <ul class="navigation">
-                    <a href="./news.html"><li>Noticias</li></a>
-                    <a href="./Asignaturas.html"><li>Asignaturas</li></a>
-                    <a href="./tipsPage.html"><li>Calendarios</li></a>
-                    <a href="./Gallery.html"><li>Chisme</li></a>
-                    <a href="./testemail.html"><li>Sobre Nosotros</li></a>
-                    <a href="./index.html"><li>SignOut</li></a>
-                </ul>
-            </div>
-        </div>
+	<!-- Inicio menú superior -->
+	<nav class="navbar navbar-default navbar-fixed-top">
+		<div class="container-fluid" style="background-color:white; color: black">
+		<ul class="nav navbar-nav navbar-default">
+			<li><a href="index.html"><h1>3ºE<span>ESO</span></h1></a></li>
+		</ul>
+		<ul class="nav navbar-nav navbar-right">        
+			<li><a href="./news.html"><h2>Noticias</h2></a></li>
+			<li><a href="./Asignaturas.html"><h2>Asignaturas</h2></a></li>
+			<li><a href="./tipsPage.html"><h2>Calendarios</h2></a></li>
+			<li><a href="./Gallery.html"><h2>Cotilleos</h2></a></li>
+			<li><a href="./testemail.html"><h2>Sobre nosotros</h2></a></li>
+			<li><a href="./index.html"><h2>Cerrar Sesión</h2></a></li>
+		</ul>
+		</div>
+	</nav>    
+	<!-- Fin menú superior -->
 
 	<div class="news_subtitle">
 		<pre>
