--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
                                     <p>y en tu cabeza dejarán de dar vueltas.</p>
                                     <p>Llamadas a montones</p>
                                     <p>para entender las funciones.</p>
-                                        Mates, lengua o inglés,
-                                        en todo sacarás diez.
+                                    <p>Mates, lengua o inglés,</p>
+                                    <p>en todo sacarás diez.</p>
                             </td>
                         </tr>
                     </tbody>
