--- a/Asignaturas.html
+++ b/Asignaturas.html
@@ -47,7 +47,7 @@
 
         <div class="Subtitle">
                 <div class="Subtitle_tips">
-                    <center><p style="font-size: 350%; font-family: Helvetica; font-weight: bold;">Aquí están las explicaciones y ayudas</p></center>
+                    <center><p style="font-size: 350%; font-family: Helvetica; font-weight: bold; color: white;">Aquí están las explicaciones y ayudas</p></center>
                 </div>
         </div>
 
