--- a/Lengua Temas.html
+++ b/Lengua Temas.html
@@ -46,7 +46,7 @@
     <br>
         <div class="Subtitle">
                 <div class="Subtitle_tips">
-                    <center><p style="font-size: 350%; font-family: Helvetica; font-weight: bold;">Lengua</p></center>
+                    <center><p style="font-size: 350%; font-family: Helvetica; font-weight: bold; color: white;">Lengua</p></center>
                 </div>
         </div>
 
