--- a/Tema1.html
+++ b/Tema1.html
@@ -46,8 +46,8 @@
     <br>
 	<div class="news_subtitle">
 			<div class="Subtitle_news">
-				<center><p style="font-size: 350%; font-family: Helvetica; font-weight: bold;">Matemáticas</p></center>
-				<center><p style="font-size: 350%; font-family: Helvetica; font-weight: bold;">Tema 1</p></center>
+				<center><p style="font-size: 350%; font-family: Helvetica; font-weight: bold; color: white;">Matemáticas</p></center>
+				<center><p style="font-size: 350%; font-family: Helvetica; font-weight: bold; color: white;">Tema 1</p></center>
 			</div>
 	</div>
 
@@ -61,7 +61,7 @@
 								src="https://www.youtube.com/embed/rSLuXOTdje8">
 							</iframe>
 							<p style="font-size: 120%; font-weight: 400;">
-								La suma y resta de fracciones puede llegar a ser un poco complicada pero si simplificas y haces bien el mínimo común multiplo, no tiene ningún secreto.
+								La suma y resta de fracciones puede llegar a ser un poco complicada pero si simplificas y haces bien el mínimo común múltiplo, no tiene ningún secreto.
 							</p>
 						</th>
 						<th><p style=" font-weight: bold; font-size: 220% ;"> Multiplicación de Fracciones</p>
