--- a/TemasFrancés.html
+++ b/TemasFrancés.html
@@ -46,7 +46,7 @@
     <br>
         <div class="Subtitle">
                 <div class="Subtitle_tips">
-                    <center><p style="font-size: 350%; font-family: Helvetica; font-weight: bold; color: white;">Fran&ccedil;cais</p></center>
+                    <center><p style="font-size: 350%; font-family: Helvetica; font-weight: bold; color: white;">Français</p></center>
                 </div>
         </div>
 
