--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner">
         <div class="item active">
-            <img src="Logotipo patito bañera infantil colorido.png" alt="Logo página web" style="width:100%;">
+            <img src="LogoJolinesMacho.png" alt="Logo Jolines Macho" style="width:100%;">
         </div>
         <div class="item">
             <img src="Florecillas.png" alt="Florecillas" style="width:100%;">
         </div>
         <div class="item">
-            <img src="https://tse3.mm.bing.net/th?id=OIP.FhYlCubIKPImuEdEhXoQ9QHaGB&pid=Api&P=0" alt="Provisional" style="width:100%;">
+            <img src="FotoClase.png" alt="Clase 3ºEEso" style="width:100%;">
         </div>
     </div>
     <!-- Left and right controls -->
