--- a/TemasHistoria.html
+++ b/TemasHistoria.html
@@ -10,7 +10,7 @@
         <link href="StyleSchool.css" rel="stylesheet" type="text/css">
     
         <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet'>
-        <link href="Logotipo patito bañera infantil colorido.png" rel="icon">
+        <link href="LogoJolinesMacho.png" rel="icon">
     
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>    
