--- a/Lengua Temas.html
+++ b/Lengua Temas.html
@@ -74,7 +74,7 @@
                                 <tr>
                                     
                                     <td><p style=" font-weight: bold; font-size: 220% ;">Variedades Lingüísticas</p>
-                                        <a href="./Science.html"><img class="PhotoLink" src="https://tse4.mm.bing.net/th?id=OIP.kP_K7zmwSTACA2NDefh6BAHaFj&pid=Api&P=0" style="height: 450px; width: 620px;"></a>
+                                        <a href="./Science.html"><img class="PhotoLink" src="VariedadesLinguísticas.jpg" style="height: 450px; width: 620px;"></a>
                                     </td>
                                 </tr>
                                 <tr>
