--- a/Lengua Temas.html
+++ b/Lengua Temas.html
@@ -79,8 +79,8 @@
                                 </tr>
                                 <tr>
                                     
-                                    <td><p style=" font-weight: bold; font-size: 220% ;">FyQ</p>
-                                        <a href="./Spanish.html"><img class="PhotoLink" src="https://img.freepik.com/free-vector/hand-drawn-science-education-background_23-2148499325.jpg?w=2000" style="height: 450px; width: 620px;"></a>
+                                    <td><p style=" font-weight: bold; font-size: 220% ;">El texto Narrativo</p>
+                                        <a href="./Spanish.html"><img class="PhotoLink" src="https://letrassabiasdecande.files.wordpress.com/2019/01/texto-narrativo.jpg?w=825&h=510&crop=1" style="height: 450px; width: 620px;"></a>
                                     </td>
                                 </tr>
                                 <tr>
