--- a/Calendarios.html
+++ b/Calendarios.html
@@ -17,7 +17,7 @@
         <script type="text/javascript" src="Javascript.js"></script>     
         <title>3ºEEso</title>
     </head>    
-<body class="Explanations">
+<body class="Calendarios">
         
     <!-- Inicio menú superior -->
     <nav class="navbar navbar-default navbar-fixed-top">
