--- a/Asignaturas.html
+++ b/Asignaturas.html
@@ -23,7 +23,7 @@
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid" style="background-color:white; color: black">
         <ul class="nav navbar-nav navbar-default">
-            <li><a href="index.html"><h1>3ºE<span>ESO</span></h1></a></li>
+            <li><a href="index.html"><h1>3ºE ESO</h1></a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">        
             <li><a href="./news.html"><h2>Noticias</h2></a></li>
