--- a/TemasInglés.html
+++ b/TemasInglés.html
@@ -46,7 +46,7 @@
     <br>
         <div class="Subtitle">
                 <div class="Subtitle_tips">
-                    <center><p style="font-size: 350%; font-family: Helvetica; font-weight: bold; color: white;">Inglés</p></center>
+                    <center><p style="font-size: 350%; font-family: Helvetica; font-weight: bold; color: white;">English</p></center>
                 </div>
         </div>
 
@@ -55,8 +55,8 @@
                 <table class = "explanations_table">
                         <tbody>
                                     <tr>
-                                        <td><p style=" font-weight: bold; font-size: 220% ;">Tema1</p>
-                                            <a href="./Tema1.html"><img class="PhotoLink" src="Fracciones.png" alt="StudenStudying" style="height: 450px; width: 620px;"></a>
+                                        <td><p style=" font-weight: bold; font-size: 220% ;">Unit 1</p>
+                                            <a href="./Tema1.html"><img class="PhotoLink" src="tema1.PNG" alt="StudenStudying" style="height: 450px; width: 620px;"></a>
                                         </td>
                                     </tr>
                                 <tr>
