--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <li><a href="./news.html"><h2>Noticias</h2></a></li>
         <li><a href="./Asignaturas.html"><h2>Asignaturas</h2></a></li>
         <li><a href="./Calendarios.html"><h2>Calendarios</h2></a></li>
-        <li><a href="./Gallery.html"><h2>Cotilleos</h2></a></li>
+        <li><a href="./Juegos.html"><h2>Juegos</h2></a></li>
         <li><a href="./testemail.html"><h2>Sobre nosotros</h2></a></li>
         <li><a href="./index.html"><h2>Cerrar Sesión</h2></a></li>
       </ul>
