--- a/Juegos.html
+++ b/Juegos.html
@@ -57,7 +57,7 @@
                         <tbody>
                                     <tr>
                                         <td><p style=" font-weight: bold; font-size: 220% ;">Fire Boy and Water Girl</p>
-                                            <a href="./TemasMates.html"><img class="PhotoLink" src="https://images.theconversation.com/files/274417/original/file-20190514-60529-ktb5t3.jpg?ixlib=rb-1.1.0&q=20&auto=format&w=320&fit=clip&dpr=2&usm=12&cs=strip" alt="StudenStudying" style="height: 450px; width: 620px;"></a>
+                                            <a href="./FireBoyAndWaterGirl.html"><img class="PhotoLink" src="https://images.theconversation.com/files/274417/original/file-20190514-60529-ktb5t3.jpg?ixlib=rb-1.1.0&q=20&auto=format&w=320&fit=clip&dpr=2&usm=12&cs=strip" alt="StudenStudying" style="height: 450px; width: 620px;"></a>
                                         </td>
                                     </tr>
                                 <tr>
