Fire boy and water girl

--- a/FireBoyAndWaterGirl.html
+++ b/FireBoyAndWaterGirl.html
@@ -47,11 +47,11 @@
 
         <div class="Subtitle">
                 <div class="Subtitle_tips">
-                    <center><p style="font-size: 350%; font-family: Helvetica; font-weight: bold; color: white;">Aquí están los Juegos mas divertidos paa entretenerse</p></center>
+                    <center><p style="font-size: 350%; font-family: Helvetica; font-weight: bold; color: white;">Aquí están los Juegos mas divertidos para entretenerse</p></center>
                 </div>
         </div>
 
-        <div class="Tip_table">
+        <div class="Game_table">
             <center>
                 <table class = "explanations_table">
                         <tbody>
