--- a/FireBoyAndWaterGirl.html
+++ b/FireBoyAndWaterGirl.html
@@ -47,7 +47,7 @@
 
         <div class="Subtitle">
                 <div class="Subtitle_tips">
-                    <center><p style="font-size: 350%; font-family: Helvetica; font-weight: bold; color: white;">Aquí están los Juegos mas divertidos para entretenerse</p></center>
+                    <center><p style="font-size: 350%; font-family: Helvetica; font-weight: bold; color: white;">Fire Boy and Water Girl</p></center>
                 </div>
         </div>
 
