Fireboy and watergirl

--- a/FireBoyAndWaterGirl.html
+++ b/FireBoyAndWaterGirl.html
@@ -60,6 +60,14 @@
                                             <iframe src='https://www.minijuegos.com/embed/fireboy-and-watergirl-4-the-crystal-temple' style='width:100%;height:100%;' frameborder='0' allowfullscreen></iframe>
                                         </td>
                                     </tr>
+                                    <tr>
+                                        <td>
+                                            <h1>Fire Boy and Water Girl</h1>
+                                        </td>
+                                        <td>
+                                            <p>Fire Boy and Water Girl es un juego de 2 jugadores de plataformas en el cual teneis que aunar esfuerzos para completar el nivel, alcanzando los dos la puerta con el símbolo del personaje. Fire boy se controla con las flechas y water girl con WASD</p>
+                                        </td>
+                                    </tr>
                         </tbody>
                 </table>
             </center>
