--- a/Juegos.html
+++ b/Juegos.html
@@ -62,7 +62,7 @@
                                     </tr>
                                 <tr>
 
-                                    <td><p style=" font-weight: bold; font-size: 220% ;">Inglés</p>
+                                    <td><p style=" font-weight: bold; font-size: 220% ;">Apple Eve</p>
                                         <a href="./AppleEve.html"><img class="PhotoLink" src="https://2021-22.eva.educalab.es/iesmiguelfernandez/pluginfile.php/395/course/overviewfiles/Learn-English.jpg" style="height: 450px; width: 620px;"></a>
                                     </td>
                                 </tr>
