--- a/AppleEve.html
+++ b/AppleEve.html
@@ -61,6 +61,14 @@
                                             <iframe src="https://scratch.mit.edu/projects/297432688/embed" allowtransparency="true" width="970" height="804" frameborder="0" scrolling="no" allowfullscreen></iframe>
                                         </td>
                                     </tr>
+                                    <tr>
+                                        <h1>Controls:
+                                            Move - Arrow Keys/WASD
+                                            Shoot - space
+                                            head bump - jump above zombies and use down arrow key/s
+                                            Updadtes clicking house <button></button>
+                                        </h1>
+                                    </tr>
                         </tbody>
                 </table>
             </center>
