--- a/AppleEve.html
+++ b/AppleEve.html
@@ -65,9 +65,15 @@
                                         <td>
                                             <h1>Controls:
                                                 Move - Arrow Keys/WASD
+                                            </h1>
+                                            <h1>
                                                 Shoot - space
+                                            </h1>
+                                            <h1>
                                                 head bump - jump above zombies and use down arrow key/s
-                                                Updadtes clicking house <button></button>
+                                            </h1>
+                                            <h1>
+                                                Updadtes clicking house button
                                             </h1>
                                         </td>
                                     </tr>
