--- a/Lengua Temas.html
+++ b/Lengua Temas.html
@@ -74,7 +74,7 @@
                                 <tr>
                                     
                                     <td><p style=" font-weight: bold; font-size: 220% ;">Variedades Lingüísticas</p>
-                                        <a href="./VariedadesLinguisticas.html"><img class="PhotoLink" src="VariedadesLinguísticas.jpg" style="height: 450px; width: 620px;"></a>
+                                        <a href="./VariedadesLinguisticas.html"><img class="PhotoLink" src="Images/VariedadesLinguísticas.jpg" style="height: 450px; width: 620px;"></a>
                                     </td>
                                 </tr>
                                 <tr>
