--- a/TemasInglés.html
+++ b/TemasInglés.html
@@ -56,25 +56,25 @@
                         <tbody>
                                     <tr>
                                         <td><p style=" font-weight: bold; font-size: 220% ;">Unit 1</p>
-                                            <a href="./Tema1.html"><img class="PhotoLink" src="tema1.PNG" alt="StudenStudying" style="height: 450px; width: 620px;"></a>
+                                            <a href="./Tema1.html"><img class="PhotoLink" src="Images/tema1.PNG" alt="StudenStudying" style="height: 450px; width: 620px;"></a>
                                         </td>
                                     </tr>
                                 <tr>
 
                                     <td><p style=" font-weight: bold; font-size: 220% ;">Tema2</p>
-                                        <a href="./Tema2.html"><img class="PhotoLink" src="Tema2.PNG" style="height: 450px; width: 620px;"></a>
+                                        <a href="./Tema2.html"><img class="PhotoLink" src="Images/Tema2.PNG" style="height: 450px; width: 620px;"></a>
                                     </td>
                                 </tr>
                                 <tr>
                                     
                                     <td><p style=" font-weight: bold; font-size: 220% ;">Tema3</p>
-                                        <a href="./Science.html"><img class="PhotoLink" src="Tema3.PNG" style="height: 450px; width: 620px;"></a>
+                                        <a href="./Science.html"><img class="PhotoLink" src="Images/Tema3.PNG" style="height: 450px; width: 620px;"></a>
                                     </td>
                                 </tr>
                                 <tr>
                                     
                                     <td><p style=" font-weight: bold; font-size: 220% ;">Tema4</p>
-                                        <a href="./Spanish.html"><img class="PhotoLink" src="Tema4.PNG" style="height: 450px; width: 620px;"></a>
+                                        <a href="./Spanish.html"><img class="PhotoLink" src="Images/Tema4.PNG" style="height: 450px; width: 620px;"></a>
                                     </td>
                                 </tr>
                                 <tr>
