--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner">
         <div class="item active">
-            <img src="LogoJolinesMacho.png" alt="Logo Jolines Macho" style="width:100%;">
+            <img src="Images/LogoJolinesMacho.png" alt="Logo Jolines Macho" style="width:100%;">
         </div>
         <div class="item">
-            <img src="Florecillas.png" alt="Florecillas" style="width:100%;">
+            <img src="Images/Florecillas.png" alt="Florecillas" style="width:100%;">
         </div>
         <div class="item">
-            <img src="FotoClase.png" alt="Clase 3ºEEso" style="width:100%;">
+            <img src="Images/FotoClase.png" alt="Clase 3ºEEso" style="width:100%;">
         </div>
     </div>
     <!-- Left and right controls -->
