--- a/Juegos.html
+++ b/Juegos.html
@@ -63,7 +63,7 @@
                                 <tr>
 
                                     <td><p style=" font-weight: bold; font-size: 220% ;">Apple Eve</p>
-                                        <a href="./AppleEve.html"><img class="PhotoLink" src="https://2021-22.eva.educalab.es/iesmiguelfernandez/pluginfile.php/395/course/overviewfiles/Learn-English.jpg" style="height: 450px; width: 620px;"></a>
+                                        <a href="./AppleEve.html"><img class="PhotoLink" src="Images/Apple Eve.PNG" style="height: 450px; width: 620px;"></a>
                                     </td>
                                 </tr>
                                 <tr>
