--- a/TemasMates.html
+++ b/TemasMates.html
@@ -56,7 +56,7 @@
                         <tbody>
                                     <tr>
                                         <td><p style=" font-weight: bold; font-size: 220% ;">Tema1</p>
-                                            <a href="./Tema1.html"><img class="PhotoLink" src="Fracciones.png" alt="StudenStudying" style="height: 450px; width: 620px;"></a>
+                                            <a href="./Tema1.html"><img class="PhotoLink" src="Images/Fracciones.png" alt="StudenStudying" style="height: 450px; width: 620px;"></a>
                                         </td>
                                     </tr>
                                 <tr>
