--- a/Lengua Temas.html
+++ b/Lengua Temas.html
@@ -25,7 +25,7 @@
             <li><a href="index.html"><h1>3ºE<span>ESO</span></h1></a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">        
-            <li><a href="./news.html"><h2>Noticias</h2></a></li>
+            <li><a href="https://sites.google.com/view/monteprincipenuevodebate/inicio"><h2>Noticias</h2></a></li>
             <li><a href="./Asignaturas.html"><h2>Asignaturas</h2></a></li>
             <li><a href="./Calendarios.html"><h2>Calendarios</h2></a></li>
             <li><a href="./Gallery.html"><h2>Cotilleos</h2></a></li>
