--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid" style="background-color:white; color: black">
       <ul class="nav navbar-nav navbar-default">
-        <li><a href="index.html"><h1>3ºE<span>ESO</span></h1></a></li>
+        <li><a href="index.html" onclick="toggleNav()"><h1>3ºE<span>ESO</span></h1></a></li>
       </ul>
-      <ul class="nav navbar-nav navbar-right">        
+      <ul class="nav navbar-nav navbar-right" id="navbar-links">        
         <li><a href="https://sites.google.com/view/monteprincipenuevodebate/inicio"><h2>Noticias</h2></a></li>
         <li><a href="./Asignaturas.html"><h2>Asignaturas</h2></a></li>
         <li><a href="./Calendarios.html"><h2>Calendarios</h2></a></li>
