--- a/Didactalia.html
+++ b/Didactalia.html
@@ -47,8 +47,8 @@
 
         <div class="Subtitle">
                 <div class="Subtitle_tips">
-                    <center><p style="font-size: 350%; font-family: Helvetica; font-weight: bold; color: white;">Apple Eve</p></center>
-                    <center><p style="font-size: 200%; font-family: Helvetica; font-weight: bold; color: white;">By Theoul</p></center>
+                    <center><p style="font-size: 350%; font-family: Helvetica; font-weight: bold; color: white;">Didactalia</p></center>
+                    <center><p style="font-size: 200%; font-family: Helvetica; font-weight: bold; color: white;">Provincias de España</p></center>
                 </div>
         </div>
 
@@ -59,22 +59,6 @@
                                     <tr>
                                         <td>
                                             <iframe src="https://mapasinteractivos.didactalia.net/comunidad/mapasflashinteractivos/recurso/provincias-de-espaa/108fb9ee-6654-465a-a9ed-e84be977a27a" allowtransparency="true" width="970" height="804" frameborder="0" scrolling="no" allowfullscreen></iframe>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>
-                                            <h1>Controls:
-                                                Move - Arrow Keys/WASD
-                                            </h1>
-                                            <h1>
-                                                Shoot - space
-                                            </h1>
-                                            <h1>
-                                                head bump - jump above zombies and use down arrow key/s
-                                            </h1>
-                                            <h1>
-                                                Updadtes clicking house button
-                                            </h1>
                                         </td>
                                     </tr>
                         </tbody>
