--- a/Didactalia.html
+++ b/Didactalia.html
@@ -10,7 +10,7 @@
         <link href="StyleSchool.css" rel="stylesheet" type="text/css">
     
         <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet'>
-        <link href="LogoJolinesMacho.png" rel="icon">
+        <link href="Images/LogoJolinesMacho.png" rel="icon">
     
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>    
@@ -22,19 +22,18 @@
     <!-- Inicio menú superior -->
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid" style="background-color:white; color: black">
-        <ul class="nav navbar-nav navbar-default">
-            <li><a href="index.html"><h1>3ºE ESO</h1></a></li>
-        </ul>
-        <ul class="nav navbar-nav navbar-right">        
+          <ul class="nav navbar-nav navbar-default">
+            <li><a href="index.html" onclick="toggleNav()"><h1>3ºE<span>ESO</span></h1></a></li>
+          </ul>
+          <ul class="nav navbar-nav navbar-right navbar-links" id="navbar-links">        
             <li><a href="https://sites.google.com/view/monteprincipenuevodebate/inicio"><h2>Noticias</h2></a></li>
             <li><a href="./Asignaturas.html"><h2>Asignaturas</h2></a></li>
             <li><a href="./Calendarios.html"><h2>Calendarios</h2></a></li>
             <li><a href="./Juegos.html"><h2>Juegos</h2></a></li>
             <li><a href="./testemail.html"><h2>Sobre nosotros</h2></a></li>
-            <li><a href="./index.html"><h2>Cerrar Sesión</h2></a></li>
-        </ul>
+          </ul>
         </div>
-    </nav>    
+    </nav>   
     <!-- Fin menú superior -->
     <br>
     <br>
